crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__option_row__renders_a_toggled_option.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
"Select command                                                                  "
"[x] --force  [x] -v                                                             "
">                                                                            2/2"
"▌ remove - Remove a worktree                                                    "
"  add - Add a worktree                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
