crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__option_row__renders_the_options_row_unfocused.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app())
---
"Select command                                                                  "
">                                                                            2/2"
"[ ] --force  [x] -v                                                             "
"▌ remove - Remove a worktree                                                    "
"  add - Add a worktree                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
